--- a/explore.adoc
+++ b/explore.adoc
@@ -3,9 +3,9 @@
 ### Command Line
 
 The first thing we want to do to ensure that our `oc` command line tools was
-installed and successfully added to our path is login to the OpenShift
+installed and successfully added to our path is to logi in to the OpenShift
 environment that has been provided for this Roadshow session.  In
-order to login, we will use the `oc` command and then specify the server that we
+order to log in, we will use the `oc` command and then specify the server that we
 want to authenticate to.  Issue the following command:
 
 [source,bash]
