--- a/install.adoc
+++ b/install.adoc
@@ -56,8 +56,8 @@ Once you have the tools downloaded, you will need to extract the contents:
 
 **Windows:**
 
-In order to extract a zip archive on windows, you will need a zip utility
-installed on your system.  With newer versions of windows (greater than XP),
+In order to extract a zip archive on Windows, you will need a zip utility
+installed on your system.  With newer versions of Windows (greater than XP),
 this is provided by the operating system.  Just right click on the downloaded
 file using file explorer and select to extract the contents.
 
@@ -88,7 +88,7 @@ The tar.gz file name needs to be replaced by the entire name that was downloaded
 
 **Windows:**
 
-Because changing your PATH on windows varies by version of the operating system,
+Because changing your PATH on Windows varies by version of the operating system,
 we will not list each operating system here.  However, the general workflow is
 right click on your computer name inside of the file explorer.  Select Advanced
 system settings. I guess changing your PATH is considered an advanced task? :)
@@ -120,6 +120,47 @@ $ export PATH=$PATH:~/OpenShift
 ----
 $ export PATH=$PATH:~/OpenShift
 ----
+
+#### Working with proxies
+It might happen that you're behind a corporate proxy to access the internet. In this case, you'll need to set
+some additional environment variables for the oc command line to work.
+
+**Windows:**
+Follow previous section's instructions on how to set an Environment Variable on Windows. The variables you'll need
+to set are:
+
+[source,bash]
+----
+https_proxy=http://proxy-server.mycorp.com:3128/
+HTTPS_PROXY=http://proxy-server.mycorp.com:3128/
+----
+
+**OS X:**
+
+[source,bash]
+----
+$ export https_proxy=http://proxy-server.mycorp.com:3128/
+$ export HTTPS_PROXY=http://proxy-server.mycorp.com:3128/
+----
+
+**Linux:**
+
+[source,bash]
+----
+$ export https_proxy=http://proxy-server.mycorp.com:3128/
+$ export HTTPS_PROXY=http://proxy-server.mycorp.com:3128/
+----
+
+[NOTE]
+====
+If the proxy is secured, make sure to use the following URL pattern, replacing the contents with the
+appropriate values:
+
+export https_proxy=http://USERNAME:PASSOWRD@proxy-server.mycorp.com:3128/
+
+__Special Characters__: If your password contains special characters, you must replace them with ASCII codes, for example the at sign @ must be replaced by the %40 code, e.g. p@ssword = p%40ssword. 
+====
+
 
 #### Verify
 At this point, we should have the oc tool available for use.  Let's test this
