--- a/pipelines.adoc
+++ b/pipelines.adoc
@@ -319,7 +319,7 @@ You will need to specify:
 
 In order to start the pipeline that you created in a previous step, Go to
 *Builds* &rarr; *Pipelines* on the left side-bar. Click `nationalparks-pipeline`
-and click on *Start Build* to start the execution.  You can click on *View
+and click on *Start Pipeline* to start the execution.  You can click on *View
 Log* to take a look at the build logs as they progress through the pipeline or
 on *Build #N* to see the details of this specific pipeline execution as well as
 the pipeline definition using the
@@ -339,7 +339,7 @@ verify the service works as expected.
 
 [source,bash]
 ----
-http://nationalparks-{{EXPLORE_PROJECT_NAME}}{{USER_SUFFIX}}.{{ROUTER_ADDRESS}}/ws/data/all/
+http://nationalparks-{{EXPLORE_PROJECT_NAME}}{{USER_SUFFIX}}.{{ROUTER_ADDRESS}}/ws/data/all
 ----
 
 NOTE: If the application has not been deployed yet, you might get a __502 Bad Gateway error webpage__. This 
