--- a/remote-ops.adoc
+++ b/remote-ops.adoc
@@ -8,7 +8,7 @@ commands inside the container. Nevertheless, in some use-cases, such as debuggin
 an application, it might be beneficial to get into a container and inspect the
 application.
 
-#### Exercise: Remote Shell Session to a Container
+#### Exercise: Remote Shell Session to a Container Using the CLI
 
 OpenShift allows establishing remote shell sessions to a container without the
 need to run an SSH service inside each container. In order to establish an
@@ -57,6 +57,22 @@ $ ls /
 
 anaconda-post.log  bin  dev  etc  home  lib  lib64  lost+found  media  mnt  opt  parksmap.jar  proc  root  run  sbin  srv  sys  tmp  usr  var
 ----
+
+#### Exercise: Remote Shell Session to a Container Using the Web Console
+
+The OpenShift Web Console also provides a convenient way to access a terminal session on the container without having to use the CLI.
+
+In order to access a pods terminal via the Web Console, click on "Applications", then "Pods" and finally the pod name as shown in the following image:
+
+image::applications-pods.png[Pod List]
+
+Once you are viewing the information for the selected pod, click on the "Terminal" tab to open up a shell session.
+
+image::applications-pods-terminal.png[Pod List]
+
+
+Pretty nifty!  Go ahead and execute the same commands you did when using the CLI to see how the Web Console based terminal behaves.
+
 
 #### Exercise: Execute a Command in a Container
 
@@ -130,9 +146,3 @@ for OpenShift, or you can look at the section on
 https://{{DOCS_URL}}/latest/admin_guide/manage_scc.html#enable-images-to-run-with-user-in-the-dockerfile[enabling
 images to run with a USER in the dockerfile].
 ====
-
-#### Exercise: Use the Web Console
-
-You can also access a terminal into a container from the web console. On the
-*Pod* details page, one of the tabs says *Terminal*. Try it!
-
