--- a/java.adoc
+++ b/java.adoc
@@ -14,11 +14,11 @@ image::roadshow-app-architecture-nationalparks-1.png[Application architecture,80
 ### Background: Source-to-Image (S2I)
 
 In a previous lab, we learned how to deploy a pre-existing Docker-formatted
-image. Now we will expand on that a bit by learning how OpenShift builds
-Docker images using source code from an existing repository.
+image. Now we will expand on that by learning how OpenShift builds
+Docker images using source code from an existing repository.  This is accomplished using the Source-to-Image project.
 
-https://github.com/openshift/source-to-image[Source-to-Image (S2I)] is another
-open source project sponsored by Red Hat. Its goal:
+https://github.com/openshift/source-to-image[Source-to-Image (S2I)] is a
+open source project sponsored by Red Hat that has the following goal:
 
 [source]
 ----
@@ -40,7 +40,7 @@ other aspects of OpenShift.
 A full discussion of S2I is beyond the scope of this class, but you can find
 more information about it either in the
 https://{{DOCS_URL}}/latest/creating_images/s2i.html[OpenShift S2I documentation]
-or on GitHub (following the link above). The only key concept you need to
+or on https://github.com/openshift/source-to-image[GitHub]. The only key concept you need to
 remember about S2I is that it's magic.
 
 ### Exercise: Creating a Java application
@@ -53,9 +53,9 @@ saying that we are going to deploy a webservice that returns a JSON list of
 places.
 
 #### Add to Project
-Because the `nationalparks` application is a back-end to serve data that our
-existing front-end will consume, we are going to build it inside the existing
-`{{EXPLORE_PROJECT_NAME}}{{USER_SUFFIX}}` project. And, we will do it from the web console.
+Because the `nationalparks` component is a back-end to serve data that our
+existing front-end (parksmap) will consume, we are going to build it inside the existing
+project that we have been working with. To illustrate how you can interact with OpenShift via the CLI or the Web Console, we will deploy the nationalparks component using the web console.
 
 #### Using application code on embedded Git server
 
@@ -64,7 +64,7 @@ GitLab, or any other server that speaks Git. You can even register webhooks in
 your Git server to initiate OpenShift builds triggered by any update to the
 application code!
 
-{% if GIT_SERVER == 'gitlab' or GIT_SERVER == 'github' %}
+{% if GIT_SERVER == 'gitlab'%}
 The repository that we are going to use is already cloned in the internal GitLab repository
 and located at the following URL:
 
@@ -77,6 +77,19 @@ http://{{GITLAB_URL_PREFIX}}.{{ROUTER_ADDRESS}}/{{GITLAB_USER}}/nationalparks/tr
 ====
 Your GitLab credentials are: *{{GITLAB_USER}}/{{GITLAB_PASSWORD}}*
 ====
+{% endif %}
+
+{% if GIT_SERVER == 'github'%}
+The repository that we are going to use is hosted on GitHub and is located at the following URL:
+
+[source,bash,role=copypaste]
+----
+http://{{GITHUB_URL_PREFIX}}/{{GITHUB_ORG}}/nationalparks/tree/{{NATIONALPARKS_VERSION}}
+----
+
+NOTE: You should fork the repository into your own Github account.  If you do not have your own github account or do not know how to fork a project, please inform your instructor.
+
+
 {% endif %}
 
 {% if GIT_SERVER == 'gogs%}
