update image name

--- a/databases.adoc
+++ b/databases.adoc
@@ -63,7 +63,7 @@ parameters that can be customized. In our case, the parameters we are concerned
 with are -- user, password, database, and
 admin password.
 
-image::mongo-template-deploy-37.png[MongoDB]
+image::mongo-template-deploy-37.png[MongoDB Deploy]
 
 You can see that some of the fields say *"generated if empty"*. This is a
 feature of *Templates* in OpenShift that will be covered in the next lab. For
