--- a/install.adoc
+++ b/install.adoc
@@ -68,9 +68,10 @@ file.  Once you are in the directory, enter in the following command:
 
 [source,bash,role=copypaste]
 ----
-$ tar zxvf oc-macosx.tar.gz
+$ unzip oc-macosx.tar.gz
 ----
-The tar.gz file name needs to be replaced by the entire name that was downloaded in the previous step.
+
+NOTE: The zip file name needs to be replaced by the entire name that was downloaded in the previous step.
 
 **Linux:**
 
@@ -81,7 +82,8 @@ file.  Once you are in the directory, enter in the following command:
 ----
 $ tar zxvf oc-linux.tar.gz
 ----
-The tar.gz file name needs to be replaced by the entire name that was downloaded in the previous step.
+
+NOTE: The tar.gz file name needs to be replaced by the entire name that was downloaded in the previous step.
 
 
 #### Adding `oc` to your PATH
